infrastructure/kong/apps/production/go-api-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: go-api-ingress
  namespace: default
  annotations:
    konghq.com/strip-path: "true"
    kubernetes.io/ingress.class: "kong"
    konghq.com/protocols: "https,http"
    konghq.com/https-redirect-status-code: "301"
spec:
  rules:
  - http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: go-api
            port:
              number: 8080
